# basic-python-mcv

docs/: er.plantuml  usecase.md
mysql/: init.sh  init.sql
self-bank/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
self-bank/mysql/: init.sql
self-bank/src/: di_container.py  server.py
self-bank/src/application/usecase/: assest_type_usecase.py  assest_usecase.py  contact_type_usecase.py  contact_usecase.py  expense_type_usecase.py  expense_usecase.py  tranfer_usecase.py  transaction_usecase.py
self-bank/src/config/: db_config.py
self-bank/src/domain/entities/: schema.py
self-bank/src/domain/repository/: i_repository.py  i_tranfer_repository.py
self-bank/src/domain/value_objects/: dto.py
self-bank/src/infrastructure/http_resources/: asset_resources.py  contact_resources.py  expense_resources.py  expense_type_resources.py  transaction_resources.py  transfer_resources.py
self-bank/src/infrastructure/mysql/: mysql_connection.py
self-bank/src/infrastructure/mysql/repositories/: assest_repo.py  assest_type_repo.py  base_repository.py  contact_repo.py  contact_type_repo.py  current_sheet_repo.py  expense_repo.py  expense_type.py  tranfer_repo.py  transaction_repo.py
